more work, simplified build process

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <script src="../dist/index.js"></script>
+    <script type="module" src="./index.ts"></script>
     <title>Smart Sweepers JS</title>
+    <style>
+      canvas {
+        border: 1px solid black;
+        min-width: 800px;
+        min-height: 600px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
