--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000">
-    <script src="/index.b71e74eb.js" defer=""></script>
+    <script src="index.b71e74eb.js" defer=""></script>
     <title>Smart Sweepers JS</title>
     <style>canvas {
   border: 1px solid #000;
