--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,25 @@
     <style>
       canvas {
         border: 1px solid black;
-        min-width: 800px;
-        min-height: 600px;
+        min-width: 400px;
+        min-height: 400px;
+        display: block;
       }
+
+      #timepiece{
+  display:block;
+  width: 400px;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgba(255,0,0,.2);
+}
+
+#timepiece .filler {
+  height: 1rem;
+  padding: 0;
+  margin:0;
+  background-color: rgba(0,255,255,.5);
+}
     </style>
   </head>
   <body>
